2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mail/binhex.el (binhex-decode-region-internal):
	* mail/uudecode.el (uudecode-decode-region-internal):
	* net/dns.el (dns-read-string-name, dns-read, dns-read-type, query-dns):
	* sha1.el (sha1-string-external): Use set-buffer-multibyte rather than
	setting default-enable-multibyte-characters.

	* emulation/viper-util.el (viper-file-remote-p): Remove, unused.

	* comint.el: Fix up indentation and comment style.  Remove `function'.

	* international/mule-cmds.el (reset-language-environment)
	(set-language-environment-nonascii-translation): Don't set-unibyte-charset.

	* doc-view.el: Remove all cb-args, use closures instead.
	(doc-view-sentinel): Merge doc-view-dvi->pdf-sentinel,
	doc-view-ps->pdf-sentinel, and doc-view-pdf->txt-sentinel (which was
	doing an incorrect check).  Update all callers to use the new name.
	(doc-view-doc->txt): Add missing `txt' argument.

2008-03-12  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-current-cache-dir): Set buffer used for
	md5 sum calculation to single-byte.

2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-new-window-function): Add assertion.
	(doc-view-doc-type): New var.
	(doc-view-convert-current-doc, doc-view-doc->txt): Use it.
	(doc-view-intersection): New fun.
	(doc-view-mode): Use it to set the new var.

2008-03-12  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-doc->txt, doc-view-open-text)
	(doc-view-already-converted-p): New functions.
	(doc-view-clear-cache): Don't recreate doc-view-cache-directory.
	(doc-view-mode-map): Bind C-c C-t to doc-view-open-text.
	(doc-view-dvi->pdf-sentinel, doc-view-dvi->pdf)
	(doc-view-pdf->txt-sentinel, doc-view-pdf->txt)
	(doc-view-ps->pdf-sentinel, doc-view-ps->pdf)
	(doc-view-convert-current-doc): Don't hardwire the functions the
	sentinels call.  Now they're provided by two args CALLBACK and
	CB-ARGS to the functions.